--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--Title-->
+<!--Meta tags for search engines-->
+    <meta name="description" content="cleaning campus, cleaning hints and tips">
+    <meta name="keywords" content="cleaning campus, cleaning, cleaning hints, cleaning tips, cleaning newsletter">
+<!--Title-->
     <title>Cleaning Campus</title>
 </head>
 
