Added link to style sheet

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <meta name="keywords" content="cleaning campus, cleaning, cleaning hints, cleaning tips, cleaning newsletter">
 <!--Title-->
     <title>Cleaning Campus</title>
+<!--Style sheet-->
+    <link rel="stylesheet" href="assets/css/style.css">
+
 </head>
 
 <body>
