Added index.html ref, sections and their ideas in basic html structure

--- a/index.html
+++ b/index.html
@@ -16,9 +16,25 @@
 
 <body>
 
-    <header></header>
-    <main></main>
-    <footer></footer>
+<!--Header of site-->
+    <header>
+        <a href="index.html">
+            <h1 id="logo">Cleaning Campus</h1>
+        </a>
+    </header>
+
+<!--Main Content of site-->
+    <main>
+        <section id="about-us">About us</section>
+        <section id="tip">Tip</section>
+        <section id="newsletter">Newsletter</section>
+    </main>
+
+<!--Footer of site-->
+    <footer>
+        <section id="contact-us">Contact Us</section>
+        <section id="social-pages">Social Pages</section>
+    </footer>
 
 </body>
 
