Added nav bar with links

--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
         <a href="index.html">
             <h1 id="logo">Cleaning Campus</h1>
         </a>
+        <nav id="menu">
+            <ul>
+                <li><a href="#logo">Cleaning Campus</a></li>
+                <li><a href="#about-us">About Us</a></li>
+                <li><a href="#tip">Monthly Tip</a></li>
+                <li><a href="#newsletter">Sign Up</a></li>
+                <li><a href="#contact-us">Contact Us</a></li>
+            </ul>
+        </nav>
     </header>
 
 <!--Main Content of site-->
