--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
         <a href="index.html">
             <h1 id="logo">Cleaning Campus</h1>
         </a>
-        <nav id="menu">
-            <ul>
-                <li><a href="#logo">Cleaning Campus</a></li>
+        <nav>
+            <ul id="menu">
                 <li><a href="#about-us">About Us</a></li>
                 <li><a href="#tip">Monthly Tip</a></li>
                 <li><a href="#newsletter">Sign Up</a></li>
@@ -41,8 +40,21 @@
 
 <!--Footer of site-->
     <footer>
-        <section id="contact-us">Contact Us</section>
-        <section id="social-pages">Social Pages</section>
+        <section id="contact-us">Contact Us
+            <ol id="contact-details">
+                <li>123 Cleaning Street Cleaning Road Cleaning Town CL3 4NS</li>
+                <li>01234 567 891</li>
+                <li>cleaning-campus@clean.com</li>
+            </ol>
+        </section>
+        <section id="social-pages">Social Pages
+            <ul id="social">
+                <li><a href="https://en-gb.facebook.com/">Facebook</a></li>
+                <li><a href="https://twitter.com/">Twitter</a></li>
+                <li><a href="https://www.youtube.com/">Youtube</a></li>
+                <li><a href="https://www.instagram.com/accounts/login/">Instagram</a></li>
+            </ul>
+        </section>
     </footer>
 
 </body>
