Added social media icons

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <title>Cleaning Campus</title>
 <!--Style sheet-->
     <link rel="stylesheet" href="assets/css/style.css">
+<!--Font awesome-->
+    <script src="https://kit.fontawesome.com/9bc4d1dd13.js" crossorigin="anonymous"></script>
 
 </head>
 
@@ -40,19 +42,22 @@
 
 <!--Footer of site-->
     <footer>
-        <section id="contact-us">Contact Us
+        <section id="contact-us">
+            <h2>Contact Us</h2>
             <ol id="contact-details">
-                <li>123 Cleaning Street Cleaning Road Cleaning Town CL3 4NS</li>
+                <li>123 Cleaning Street</li>
+                <li>Cleaning Town</li>
+                <li>CL3 4NS</li>
                 <li>01234 567 891</li>
                 <li>cleaning-campus@clean.com</li>
             </ol>
         </section>
-        <section id="social-pages">Social Pages
+        <section id="social-pages">
             <ul id="social">
-                <li><a href="https://en-gb.facebook.com/">Facebook</a></li>
-                <li><a href="https://twitter.com/">Twitter</a></li>
-                <li><a href="https://www.youtube.com/">Youtube</a></li>
-                <li><a href="https://www.instagram.com/accounts/login/">Instagram</a></li>
+                <li><a href="https://en-gb.facebook.com/"target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
+                <li><a href="https://twitter.com/" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
+                <li><a href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-youtube"></i></a></li>
+                <li><a href="https://www.instagram.com/accounts/login/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
             </ul>
         </section>
     </footer>
