Menu and logo now inline

--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
         <a href="index.html">
             <h1 id="logo">Cleaning Campus</h1>
         </a>
+<!--Menu-->
         <nav>
             <ul id="menu">
                 <li><a href="#about-us">About Us</a></li>
                 <li><a href="#tip">Monthly Tip</a></li>
-                <li><a href="#newsletter">Sign Up</a></li>
+                <li><a href="#newsletter">Newsletter</a></li>
                 <li><a href="#contact-us">Contact Us</a></li>
             </ul>
         </nav>
@@ -42,6 +43,7 @@
 
 <!--Footer of site-->
     <footer>
+<!--Contact Section-->
         <section id="contact-us">
             <h2>Contact Us</h2>
             <ol id="contact-details">
@@ -52,6 +54,7 @@
                 <li>cleaning-campus@clean.com</li>
             </ol>
         </section>
+    <!--Social Media Section-->
         <section id="social-pages">
             <ul id="social">
                 <li><a href="https://en-gb.facebook.com/"target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
