Added basic text to main content and start of basic html code for signup form

--- a/index.html
+++ b/index.html
@@ -36,9 +36,44 @@
 
 <!--Main Content of site-->
     <main>
-        <section id="about-us">About us</section>
-        <section id="tip">Tip</section>
-        <section id="newsletter">Newsletter</section>
+<!--About us Section-->
+        <section id="about-us">
+            <h3>About Us</h3>
+            <p> Welcome to Cleaning Campus the site that shows you latest products and techniques within the world of cleaning!
+                Like a clean environment whether you want results with minimal effort, quick hacks or timeless tips this is the place
+                for you! Let’s get your home sparkling.
+                Sign up to our free monthly newsletter to never miss out on the latest releases and information regarding all things
+                clean!
+            </p>
+        </section>
+
+<!--Monthly tip Section-->
+        <section id="tip">
+            <h3>Monthly Tip</h3>
+            <p>Don’t be overwhelmed by what you must tackle, start small and plan tasks realistically with help of this handy planner.
+                Break your house down into areas and then with in the areas break them down into zones. Step by step you can achieve the
+                home environment you crave and deserve!
+            </p>
+        </section>
+
+<!--Newsletter Section-->
+        <section id="newsletter"></section>
+<!--Heading-->
+            <h3>Sign up to our monthly newsletter.</h3>
+<!--Sign up form-->
+            <form id="signup-form" method="POST" action="https://formdump.codeinstitute.net">
+                <label for="firstname">First Name:</label>
+                <input type="text" id="firstname" required>
+                <br>
+                <label for="lastname">Last Name:</label>
+                <input type="text" id="lastname" required>
+                <br>
+                <label for="email">Email Address:</label>
+                <input type="email" id="email" required>
+                <br>
+                <button type="submit">Welcome!</button>
+
+            </form>
     </main>
 
 <!--Footer of site-->
