fixed form submission

--- a/index.html
+++ b/index.html
@@ -61,17 +61,17 @@
 <!--Heading-->
             <h3>Sign up to our monthly newsletter.</h3>
 <!--Sign up form-->
-            <form id="signup-form" method="POST" action="https://formdump.codeinstitute.net">
+            <form id="signup-form" method="POST" action="https://formdump.codeinstitute.net/">
                 <label for="firstname">First Name:</label>
-                <input type="text" id="firstname" required>
+                <input type="text" id="firstname" name="firstname" required>
                 <br>
                 <label for="lastname">Last Name:</label>
-                <input type="text" id="lastname" required>
+                <input type="text" id="lastname" name="lastname" required>
                 <br>
                 <label for="email">Email Address:</label>
-                <input type="email" id="email" required>
+                <input type="email" id="email" name="email" required>
                 <br>
-                <button type="submit">Welcome!</button>
+                <input type="submit" value="Welcome!">
 
             </form>
     </main>
@@ -80,7 +80,7 @@
     <footer>
 <!--Contact Section-->
         <section id="contact-us">
-            <h2>Contact Us</h2>
+            <h3>Contact Us</h3>
             <ol id="contact-details">
                 <li>123 Cleaning Street</li>
                 <li>Cleaning Town</li>
