toggle menu inserted menu drops down

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
             <h1 id="logo">Cleaning Campus</h1>
         </a>
 <!--Menu-->
+        <input type="checkbox" id="nav-bar" name="nav-bar">
+        <label for="nav-bar" class="nav-bar-label"><i class="fa-solid fa-bars"></i></label>
         <nav>
             <ul id="menu">
                 <li><a href="#about-us">About Us</a></li>
