--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
 <!--Sign up form-->
             <form id="signup-form" method="POST" action="https://formdump.codeinstitute.net/">
                 <label for="firstname">First Name:</label>
-                <input type="text" id="firstname" name="firstname" required>
+                <input type="text" id="firstname" name="firstname" class="input" required>
                 <br>
                 <label for="lastname">Last Name:</label>
-                <input type="text" id="lastname" name="lastname" required>
+                <input type="text" id="lastname" name="lastname" class="input" required>
                 <br>
                 <label for="email">Email Address:</label>
-                <input type="email" id="email" name="email" required>
+                <input type="email" id="email" name="email" class="input" required>
                 <br>
                 <input type="submit" value="Welcome!">
 
