form postioning complete

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 <!--About us Section-->
         <section id="about-us">
             <h3>About Us</h3>
+            <aside></aside>
             <p> Welcome to Cleaning Campus the site that shows you latest products and techniques within the world of cleaning!
                 Like a clean environment whether you want results with minimal effort, quick hacks or timeless tips this is the place
                 for you! Let’s get your home sparkling.
@@ -64,16 +65,14 @@
             <h3>Sign up to our monthly newsletter.</h3>
 <!--Sign up form-->
             <form id="signup-form" method="POST" action="https://formdump.codeinstitute.net/">
-                <label for="firstname">First Name:</label>
-                <input type="text" id="firstname" name="firstname" class="input" required>
+                
+                <input type="text" value="First Name" id="firstname" name="firstname" class="input" required>
                 <br>
-                <label for="lastname">Last Name:</label>
-                <input type="text" id="lastname" name="lastname" class="input" required>
+                <input type="text" value="Last Name" id="lastname" name="lastname" class="input" required>
                 <br>
-                <label for="email">Email Address:</label>
-                <input type="email" id="email" name="email" class="input" required>
+                <input type="email" value="Email Address" id="email" name="email" class="input" required>
                 <br>
-                <input type="submit" value="Welcome!">
+                <input type="submit" value="Welcome!" class="submit">
 
             </form>
     </main>
