sign up section boarder added image positioning

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </section>
 
 <!--Newsletter Section-->
-        <section id="newsletter"></section>
+        <section id="newsletter">
 <!--Heading-->
             <h3>Sign up to our monthly newsletter.</h3>
 <!--Sign up form-->
@@ -75,6 +75,7 @@
                 <input type="submit" value="Welcome!" class="submit">
 
             </form>
+        </section>
     </main>
 
 <!--Footer of site-->
