image and link added for monthly tip planner

--- a/index.html
+++ b/index.html
@@ -53,10 +53,18 @@
 <!--Monthly tip Section-->
         <section id="tip">
             <h3>Monthly Tip</h3>
-            <p>Don’t be overwhelmed by what you must tackle, start small and plan tasks realistically with help of this handy planner.
+            <div id="tip-text">
+                <p>Don’t be overwhelmed by what you must tackle, start small and plan tasks realistically with help of this handy planner.
                 Break your house down into areas and then with in the areas break them down into zones. Step by step you can achieve the
                 home environment you crave and deserve!
-            </p>
+                </p>
+            </div>
+            <div id="tip-image">
+                <picture>
+                    <a target="_blank" href="https://www.amazon.co.uk/Weekly-Planner-Tear-Off-Sheets-Notepad/dp/B09Z1YGXPT/ref=sr_1_13?crid=32MFTB6K6TUHN&keywords=to%2Bdo%2Blist%2Bplanner&qid=1692637848&s=books&sprefix=to%2Bdo%2Blist%2Bplanner%2Cstripbooks%2C105&sr=1-13&th=1">
+                    <img src="assets/images/81wvdDbQ8OL._AC_SL1500_.jpg" width="100" height="100"></a>
+                </picture>
+            </div>
         </section>
 
 <!--Newsletter Section-->
@@ -66,11 +74,11 @@
 <!--Sign up form-->
             <form id="signup-form" method="POST" action="https://formdump.codeinstitute.net/">
                 
-                <input type="text" value="First Name" id="firstname" name="firstname" class="input" required>
+                <input type="text" placeholder="First Name" id="firstname" name="firstname" class="input" required>
                 <br>
-                <input type="text" value="Last Name" id="lastname" name="lastname" class="input" required>
+                <input type="text" placeholder="Last Name" id="lastname" name="lastname" class="input" required>
                 <br>
-                <input type="email" value="Email Address" id="email" name="email" class="input" required>
+                <input type="email" placeholder="Email Address" id="email" name="email" class="input" required>
                 <br>
                 <input type="submit" value="Welcome!" class="submit">
 
