--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <!--Main Content of site-->
     <main>
 <!--About us Section-->
-        <section id="about-us">
+        <div id="about-us">
             <h3>About Us</h3>
             <aside></aside>
             <p> Welcome to Cleaning Campus the site that shows you latest products and techniques within the world of cleaning!
@@ -48,27 +48,25 @@
                 Sign up to our free monthly newsletter to never miss out on the latest releases and information regarding all things
                 clean!
             </p>
-        </section>
+        </div>
 
 <!--Monthly tip Section-->
-        <section id="tip">
+        <div id="tip">
             <h3>Monthly Tip</h3>
-            <div id="tip-text">
+            <div id="tip-content">
                 <p>Don’t be overwhelmed by what you must tackle, start small and plan tasks realistically with help of this handy planner.
                 Break your house down into areas and then with in the areas break them down into zones. Step by step you can achieve the
-                home environment you crave and deserve!
-                </p>
-            </div>
+                home environment you crave and deserve!</p>
+            </div>    
             <div id="tip-image">
-                <picture>
-                    <a target="_blank" href="https://www.amazon.co.uk/Weekly-Planner-Tear-Off-Sheets-Notepad/dp/B09Z1YGXPT/ref=sr_1_13?crid=32MFTB6K6TUHN&keywords=to%2Bdo%2Blist%2Bplanner&qid=1692637848&s=books&sprefix=to%2Bdo%2Blist%2Bplanner%2Cstripbooks%2C105&sr=1-13&th=1">
-                    <img src="assets/images/81wvdDbQ8OL._AC_SL1500_.jpg" width="100" height="100"></a>
-                </picture>
+                <a target="_blank" href="https://www.amazon.co.uk/Weekly-Planner-Tear-Off-Sheets-Notepad/dp/B09Z1YGXPT/ref=sr_1_13?crid=32MFTB6K6TUHN&keywords=to%2Bdo%2Blist%2Bplanner&qid=1692637848&s=books&sprefix=to%2Bdo%2Blist%2Bplanner%2Cstripbooks%2C105&sr=1-13&th=1">
+                <img src="assets/images/81wvdDbQ8OL._AC_SL1500_.jpg" width="100" height="100"></a>
             </div>
-        </section>
+        </div>
+        
 
 <!--Newsletter Section-->
-        <section id="newsletter">
+        <div id="newsletter">
 <!--Heading-->
             <h3>Sign up to our monthly newsletter.</h3>
 <!--Sign up form-->
@@ -83,7 +81,7 @@
                 <input type="submit" value="Welcome!" class="submit">
 
             </form>
-        </section>
+        </div>
     </main>
 
 <!--Footer of site-->
