Layout for screens under 653 completed

--- a/index.html
+++ b/index.html
@@ -41,12 +41,10 @@
 <!--About us Section-->
         <div id="about-us">
             <h3>About Us</h3>
-            <aside></aside>
             <p> Welcome to Cleaning Campus the site that shows you latest products and techniques within the world of cleaning!
                 Like a clean environment whether you want results with minimal effort, quick hacks or timeless tips this is the place
-                for you! Let’s get your home sparkling.
-                Sign up to our free monthly newsletter to never miss out on the latest releases and information regarding all things
-                clean!
+                for you!
+            <br>Let’s get your home sparkling.
             </p>
         </div>
 
@@ -55,12 +53,12 @@
         <div id="tip">
             <h3>Monthly Tip</h3>
             <div id="tip-content"></div>
-                <p>Don’t be overwhelmed by what you must tackle, start small and plan tasks realistically with help of this handy planner.
-                Break your house down into areas and then with in the areas break them down into zones. Step by step you can achieve the
-                home environment you crave and deserve!</p>
+                <p>Don’t be overwhelmed by what you must tackle, start small and plan tasks realistically with help of this handy planner.</p>
                 <a target="_blank" href="https://www.amazon.co.uk/Weekly-Planner-Tear-Off-Sheets-Notepad/dp/B09Z1YGXPT/ref=sr_1_13?crid=32MFTB6K6TUHN&keywords=to%2Bdo%2Blist%2Bplanner&qid=1692637848&s=books&sprefix=to%2Bdo%2Blist%2Bplanner%2Cstripbooks%2C105&sr=1-13&th=1">
-                <img src="assets/images/81wvdDbQ8OL._AC_SL1500_.jpg" width="100px" height="100px"></a>
-        </div>
+                <img src="assets/images/81wvdDbQ8OL._AC_SL1500_.jpg" width="100px" height="100px" id="planner"></a>
+                <p>Break your house down into areas and then with in the areas break them down into zones. Step by step you can achieve the
+                home environment you crave and deserve!</p>
+            </div>
         </div>
 
 <!--Newsletter Section-->
