--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
             <div id="tip-content"></div>
                 <p>Don’t be overwhelmed by what you must tackle, start small and plan tasks realistically with help of this handy planner.</p>
                 <a target="_blank" href="https://www.amazon.co.uk/Weekly-Planner-Tear-Off-Sheets-Notepad/dp/B09Z1YGXPT/ref=sr_1_13?crid=32MFTB6K6TUHN&keywords=to%2Bdo%2Blist%2Bplanner&qid=1692637848&s=books&sprefix=to%2Bdo%2Blist%2Bplanner%2Cstripbooks%2C105&sr=1-13&th=1">
-                <img src="assets/images/81wvdDbQ8OL._AC_SL1500_.jpg" width="100px" height="100px" id="planner"></a>
+                <img src="assets/images/81wvdDbQ8OL._AC_SL1500_.jpg" width="100" height="100" id="planner"></a>
                 <p>Break your house down into areas and then with in the areas break them down into zones. Step by step you can achieve the
                 home environment you crave and deserve!</p>
-            </div>
+            
         </div>
 
 <!--Newsletter Section-->
@@ -93,10 +93,10 @@
     <!--Social Media Section-->
         <section id="social-pages">
             <ul id="social">
-                <li><a href="https://en-gb.facebook.com/"target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
-                <li><a href="https://twitter.com/" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
-                <li><a href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-youtube"></i></a></li>
-                <li><a href="https://www.instagram.com/accounts/login/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+                <li><a href="https://en-gb.facebook.com/" target="_blank"><i class="fa-brands fa-facebook-f" style="color: #000000;"></i></a></li>
+                <li><a href="https://twitter.com/" target="_blank"><i class="fa-brands fa-twitter" style="color: #000000;"></i></a></li>
+                <li><a href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-youtube" style="color: #000000;"></i></a></li>
+                <li><a href="https://www.instagram.com/accounts/login/" target="_blank"><i class="fa-brands fa-instagram" style="color: #000000;"></i></a></li>
             </ul>
         </section>
     </footer>
