screens min 768px about us section positioned

--- a/index.html
+++ b/index.html
@@ -59,10 +59,11 @@
 
         <div id="about-us">
             <h3>About Us</h3>
-            <p> Welcome to Cleaning Campus the site that shows you latest products and techniques within the world of cleaning!
+            <p> Welcome to Cleaning Campus the site that shows you latest products and techniques within the world of cleaning.
                 Like a clean environment whether you want results with minimal effort, quick hacks or timeless tips this is the place
-                for you!
-            <br>Let’s get your home sparkling.
+                for you.
+            <br>    
+            <br>Let’s get your home sparkling!
             </p>
         </div>
 
@@ -138,7 +139,7 @@
                 <li><a href="https://www.instagram.com/accounts/login/" target="_blank"><i class="fa-brands fa-instagram" style="color: #000000;"></i></a></li>
             </ul>
         </section>
-        
+
     </footer>
 
 </body>
