planner picture error corrected for mobile screens

--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
 
         <div id="tip">
             <h3>Monthly Tip</h3>
-        <div id="tip-content"></div>
+        <div id="tip-content">
             <p>Don’t be overwhelmed by what you must tackle, start small and plan tasks realistically with help of this handy planner.</p>
             <a target="_blank" href="https://www.amazon.co.uk/Weekly-Planner-Tear-Off-Sheets-Notepad/dp/B09Z1YGXPT/ref=sr_1_13?crid=32MFTB6K6TUHN&keywords=to%2Bdo%2Blist%2Bplanner&qid=1692637848&s=books&sprefix=to%2Bdo%2Blist%2Bplanner%2Cstripbooks%2C105&sr=1-13&th=1">
             <img src="assets/images/81wvdDbQ8OL._AC_SL1500_.jpg" width="100" height="100" id="planner"></a>
             <p>Break your house down into areas and then with in the areas break them down into zones. Step by step you can achieve the home environment you crave and deserve!</p>
-            
+        </div>
         </div>
 
     </section>
