logo added in header instead of text

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <header>
 
         <a href="index.html">
-            <h1 id="logo">Cleaning Campus</h1>
+            <h1 id="logo"><img src="assets/images/cclogo2.png" height="100px" width="100px"></h1>
         </a>
 
 <!--Menu-->
