Improved about us structure including spans to make css style better

--- a/index.html
+++ b/index.html
@@ -59,12 +59,19 @@
 
         <div id="about-us">
             <h3>About Us</h3>
-            <p> Welcome to Cleaning Campus the site that shows you latest products and techniques within the world of cleaning.
+            <span id="about-us-text">
+                <p> Welcome to Cleaning Campus the site that shows you latest products and techniques within the world of cleaning.
                 Like a clean environment whether you want results with minimal effort, quick hacks or timeless tips this is the place
                 for you.
-            <br>    
-            <br>Let’s get your home sparkling!
-            </p>
+                </p>    
+            </span>
+            <span id="about-us-image">
+                <img src="assets/images/roompic.jpg">
+            </span>
+            <span id="sparkling">
+                <p>Lets’s get your home sparkling!
+                </p>
+            </span>    
         </div>
 
     </section>
