improved about us content so it provides more information

--- a/index.html
+++ b/index.html
@@ -60,13 +60,15 @@
         <div id="about-us">
             <h3>About Us</h3>
             <span id="about-us-text">
-                <p> Welcome to Cleaning Campus the site that shows you latest products and techniques within the world of cleaning.
-                Like a clean environment whether you want results with minimal effort, quick hacks or timeless tips this is the place
-                for you.
-                </p>    
+                <p> Welcome to Cleaning Campus the site that shows you latest products and techniques within the world of cleaning.<p>
+                <br>
+                <p>Like a clean environment whether you want results with minimal effort, quick hacks or timeless tips this is the place
+                for you.</p>
+                <br>
+                <p>Cleaning Campus will keep you upto date with new products and new tips to help tackle all the tasks you may or may have put off.</p>    
             </span>
             <span id="about-us-image">
-                <img src="assets/images/roompic.jpg">
+                <img src="assets/images/roompic.jpg" height="100px" width="100px">
             </span>
             <span id="sparkling">
                 <p>Lets’s get your home sparkling!
