--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <section>
 
         <div id="tip">
-            <h3>Monthly Tip</h3>
+            <h3 id="monthly">Monthly Tip</h3>  
         <div id="tip-content">
             <p>Don’t be overwhelmed by what you must tackle, start small and plan tasks realistically with help of this handy planner.</p>
             <a target="_blank" href="https://www.amazon.co.uk/Weekly-Planner-Tear-Off-Sheets-Notepad/dp/B09Z1YGXPT/ref=sr_1_13?crid=32MFTB6K6TUHN&keywords=to%2Bdo%2Blist%2Bplanner&qid=1692637848&s=books&sprefix=to%2Bdo%2Blist%2Bplanner%2Cstripbooks%2C105&sr=1-13&th=1">
