alt tags added to html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <!--Title-->
 
-    <title>Cleaning Campus</title>
+    <title>Cleaning Campus </title>
 
 <!--Style sheet-->
 
@@ -31,7 +31,7 @@
     <header>
 
         <a href="index.html">
-            <h1 id="logo"><img src="assets/images/cclogo2.png" height="100px" width="100px"></h1>
+            <h1 id="logo"><img src="assets/images/cclogo2.png" height="100px" width="100px" alt="Cleaning Campus logo"></h1>
         </a>
 
 <!--Menu-->
@@ -57,7 +57,7 @@
 
     <section>
 
-        <div id="about-us">
+        <div id="about-us" aria-labelledby="About Cleaning Campus">
             <h3>About Us</h3>
             <span id="about-us-text">
                 <p> Welcome to Cleaning Campus the site that shows you latest products and techniques within the world of cleaning.<p>
@@ -68,7 +68,8 @@
                 <p>Cleaning Campus will keep you upto date with new products and new tips to help tackle all the tasks you may or may have put off.</p>    
             </span>
             <span id="about-us-image">
-                <img src="assets/images/roompic.jpg" height="350px" width="150px">
+                <img src="assets/images/roompic.jpg" height="350px" width="150px" alt="picture of clean lounge with table and chairs" aria-labelledby="picture showning clean
+                lounge with side table and chairs.">
             </span>
             <span id="sparkling">
                 <p>Lets’s get your home sparkling!
@@ -83,11 +84,11 @@
     <section>
 
         <div id="tip">
-            <h3 id="monthly">Monthly Tip</h3>  
+            <h3 id="monthly" aria-labelledby="monthly tip section">Monthly Tip</h3>  
         <div id="tip-content">
             <p>Don’t be overwhelmed by what you must tackle, start small and plan tasks realistically with help of this handy planner.</p>
             <a target="_blank" href="https://www.amazon.co.uk/Weekly-Planner-Tear-Off-Sheets-Notepad/dp/B09Z1YGXPT/ref=sr_1_13?crid=32MFTB6K6TUHN&keywords=to%2Bdo%2Blist%2Bplanner&qid=1692637848&s=books&sprefix=to%2Bdo%2Blist%2Bplanner%2Cstripbooks%2C105&sr=1-13&th=1">
-            <img src="assets/images/81wvdDbQ8OL._AC_SL1500_.jpg" width="100" height="100" id="planner"></a>
+            <img src="assets/images/81wvdDbQ8OL._AC_SL1500_.jpg" width="100" height="100" id="planner" alt="picture of paper weekly planner"></a>
             <p>Break your house down into areas and then with in the areas break them down into zones. Step by step you can achieve the home environment you crave and deserve!</p>
         </div>
         </div>
@@ -142,10 +143,10 @@
 
         <section id="social-pages">
             <ul id="social">
-                <li><a href="https://en-gb.facebook.com/" target="_blank"><i class="fa-brands fa-facebook-f" style="color: #000000;"></i></a></li>
-                <li><a href="https://twitter.com/" target="_blank"><i class="fa-brands fa-twitter" style="color: #000000;"></i></a></li>
-                <li><a href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-youtube" style="color: #000000;"></i></a></li>
-                <li><a href="https://www.instagram.com/accounts/login/" target="_blank"><i class="fa-brands fa-instagram" style="color: #000000;"></i></a></li>
+                <li><a href="https://en-gb.facebook.com/" target="_blank" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook-f" style="color: #000000;"></i></a></li>
+                <li><a href="https://twitter.com/" target="_blank" aria-label="Visit our Twitter page (opens in a new tab)"></a>><i class="fa-brands fa-twitter" style="color: #000000;"></i></a></li>
+                <li><a href="https://www.youtube.com/" target="_blank" aria-label="Visit our Twitter page (opens in a new tab)"></a>><i class="fa-brands fa-youtube" style="color: #000000;"></i></a></li>
+                <li><a href="https://www.instagram.com/accounts/login/" target="_blank" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram" style="color: #000000;"></i></a></li>
             </ul>
         </section>
 
