--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
         <div id="tip-content">
             <p>Don’t be overwhelmed by what you must tackle, start small and plan tasks realistically with help of this handy planner.</p>
             <a target="_blank" href="https://www.amazon.co.uk/Weekly-Planner-Tear-Off-Sheets-Notepad/dp/B09Z1YGXPT/ref=sr_1_13?crid=32MFTB6K6TUHN&keywords=to%2Bdo%2Blist%2Bplanner&qid=1692637848&s=books&sprefix=to%2Bdo%2Blist%2Bplanner%2Cstripbooks%2C105&sr=1-13&th=1">
-            <img src="assets/images/81wvdDbQ8OL._AC_SL1500_.jpg" width="100" height="100" id="planner" alt="picture of paper weekly planner"></a>
+            <img src="assets/images/81wvdDbQ8OL._AC_SL1500_.jpg" width="100" height="100" id="planner" alt="picture of paper weekly planner" aria-labelledby="link to a weekly planner
+            for sale on amazon"></a>
             <p>Break your house down into areas and then with in the areas break them down into zones. Step by step you can achieve the home environment you crave and deserve!</p>
         </div>
         </div>
@@ -103,7 +104,7 @@
 
 <!--Heading-->
 
-            <h3>Sign up to our monthly newsletter.</h3>
+            <h3 aria-labelledby="sign up to monthly newsletter form">Sign up to our monthly newsletter.</h3>
 
 <!--Sign up form-->
 
@@ -132,7 +133,7 @@
 <!--Contact Section-->
 
         <section id="contact-us">
-            <h3>Contact Us</h3>
+            <h3 aria-labelledby="Contact details for Cleaning Campus">Contact Us</h3>
             <ol id="contact-details">
                 <li>01234 567 891</li>
                 <li>cleaning-campus@clean.com</li>
