fixed links to twitter and you tube due to </a> in wrong place

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <!--Title-->
 
-    <title>Cleaning Campus </title>
+    <title>Cleaning Campus</title>
 
 <!--Style sheet-->
 
@@ -145,8 +145,8 @@
         <section id="social-pages">
             <ul id="social">
                 <li><a href="https://en-gb.facebook.com/" target="_blank" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook-f" style="color: #000000;"></i></a></li>
-                <li><a href="https://twitter.com/" target="_blank" aria-label="Visit our Twitter page (opens in a new tab)"></a><i class="fa-brands fa-twitter" style="color: #000000;"></i></a></li>
-                <li><a href="https://www.youtube.com/" target="_blank" aria-label="Visit our Twitter page (opens in a new tab)"></a><i class="fa-brands fa-youtube" style="color: #000000;"></i></a></li>
+                <li><a href="https://twitter.com/" target="_blank" aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-twitter" style="color: #000000;"></i></a></li>
+                <li><a href="https://www.youtube.com/" target="_blank" aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-youtube" style="color: #000000;"></i></a></li>
                 <li><a href="https://www.instagram.com/accounts/login/" target="_blank" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram" style="color: #000000;"></i></a></li>
             </ul>
         </section>
