html error changes, including about us section changed from spans to div, also checked aria labels as had labelby which was not correct

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <header>
 
         <a href="index.html">
-            <h1 id="logo"><img src="assets/images/cclogo2.png" height="100px" width="100px" alt="Cleaning Campus logo"></h1>
+            <h1 id="logo"><img src="assets/images/cclogo2.png" height="100" width="100" alt="Cleaning Campus logo"></h1>
         </a>
 
 <!--Menu-->
@@ -57,24 +57,24 @@
 
     <section>
 
-        <div id="about-us" aria-labelledby="About Cleaning Campus">
-            <h3>About Us</h3>
-            <span id="about-us-text">
+        <div id="about-us">
+            <h3 aria-label="About Cleaning Campus">About Us</h3>
+            <div id="about-us-text">
                 <p> Welcome to Cleaning Campus the site that shows you latest products and techniques within the world of cleaning.<p>
                 <br>
                 <p>Like a clean environment whether you want results with minimal effort, quick hacks or timeless tips this is the place
                 for you.</p>
                 <br>
                 <p>Cleaning Campus will keep you upto date with new products and new tips to help tackle all the tasks you may or may have put off.</p>    
-            </span>
-            <span id="about-us-image">
-                <img src="assets/images/roompic.jpg" height="350px" width="150px" alt="picture of clean lounge with table and chairs" aria-labelledby="picture showning clean
+                </div>
+            <div id="about-us-image">
+                <img src="assets/images/roompic.jpg" height="350" width="150" alt="picture of clean lounge with table and chairs" aria-label="picture showning clean
                 lounge with side table and chairs.">
-            </span>
-            <span id="sparkling">
+            </div>
+            <div id="sparkling">
                 <p>Lets’s get your home sparkling!
                 </p>
-            </span>    
+            </div>    
         </div>
 
     </section>
@@ -84,11 +84,11 @@
     <section>
 
         <div id="tip">
-            <h3 id="monthly" aria-labelledby="monthly tip section">Monthly Tip</h3>  
+            <h3 id="monthly" aria-label="monthly tip section">Monthly Tip</h3>  
         <div id="tip-content">
             <p>Don’t be overwhelmed by what you must tackle, start small and plan tasks realistically with help of this handy planner.</p>
             <a target="_blank" href="https://www.amazon.co.uk/Weekly-Planner-Tear-Off-Sheets-Notepad/dp/B09Z1YGXPT/ref=sr_1_13?crid=32MFTB6K6TUHN&keywords=to%2Bdo%2Blist%2Bplanner&qid=1692637848&s=books&sprefix=to%2Bdo%2Blist%2Bplanner%2Cstripbooks%2C105&sr=1-13&th=1">
-            <img src="assets/images/81wvdDbQ8OL._AC_SL1500_.jpg" width="100" height="100" id="planner" alt="picture of paper weekly planner" aria-labelledby="link to a weekly planner
+            <img src="assets/images/81wvdDbQ8OL._AC_SL1500_.jpg" width="100" height="100" id="planner" alt="picture of paper weekly planner" aria-label="link to a weekly planner
             for sale on amazon"></a>
             <p>Break your house down into areas and then with in the areas break them down into zones. Step by step you can achieve the home environment you crave and deserve!</p>
         </div>
@@ -104,7 +104,7 @@
 
 <!--Heading-->
 
-            <h3 aria-labelledby="sign up to monthly newsletter form">Sign up to our monthly newsletter.</h3>
+            <h3 aria-label="sign up to monthly newsletter form">Sign up to our monthly newsletter.</h3>
 
 <!--Sign up form-->
 
@@ -133,7 +133,7 @@
 <!--Contact Section-->
 
         <section id="contact-us">
-            <h3 aria-labelledby="Contact details for Cleaning Campus">Contact Us</h3>
+            <h3 aria-label="Contact details for Cleaning Campus">Contact Us</h3>
             <ol id="contact-details">
                 <li>01234 567 891</li>
                 <li>cleaning-campus@clean.com</li>
@@ -142,14 +142,14 @@
 
     <!--Social Media Section-->
 
-        <section id="social-pages">
+        <div id="social-pages">
             <ul id="social">
                 <li><a href="https://en-gb.facebook.com/" target="_blank" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook-f" style="color: #000000;"></i></a></li>
                 <li><a href="https://twitter.com/" target="_blank" aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-twitter" style="color: #000000;"></i></a></li>
                 <li><a href="https://www.youtube.com/" target="_blank" aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-youtube" style="color: #000000;"></i></a></li>
                 <li><a href="https://www.instagram.com/accounts/login/" target="_blank" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram" style="color: #000000;"></i></a></li>
             </ul>
-        </section>
+        </div>
 
     </footer>
 
