css for galaxy fold size screen, enlarged headings and text removed unclear image

--- a/index.html
+++ b/index.html
@@ -65,10 +65,12 @@
                 <p>Like a clean environment whether you want results with minimal effort, quick hacks or timeless tips this is the place
                 for you.</p>
                 <br>
-                <p>Cleaning Campus will keep you upto date with new products and new tips to help tackle all the tasks you may or may have put off.</p>    
-                </div>
+                <p>Here at Cleaning Campus we like to keep you upto date with new products perfect for all types of tasks that you may face
+                    and new tips to help tackle all the tasks you may or may have put off.</p>
+                <br>    
+            </div>
             <div id="about-us-image">
-                <img src="assets/images/roompic.jpg" height="350" width="150" alt="picture of clean lounge with table and chairs" aria-label="picture showning clean
+                <img src="assets/images/roompic.jpg" height="250" width="250" alt="picture of clean lounge with table and chairs" aria-label="picture showning clean
                 lounge with side table and chairs.">
             </div>
             <div id="sparkling">
@@ -90,7 +92,11 @@
             <a target="_blank" href="https://www.amazon.co.uk/Weekly-Planner-Tear-Off-Sheets-Notepad/dp/B09Z1YGXPT/ref=sr_1_13?crid=32MFTB6K6TUHN&keywords=to%2Bdo%2Blist%2Bplanner&qid=1692637848&s=books&sprefix=to%2Bdo%2Blist%2Bplanner%2Cstripbooks%2C105&sr=1-13&th=1">
             <img src="assets/images/81wvdDbQ8OL._AC_SL1500_.jpg" width="100" height="100" id="planner" alt="picture of paper weekly planner" aria-label="link to a weekly planner
             for sale on amazon"></a>
-            <p>Break your house down into areas and then with in the areas break them down into zones. Step by step you can achieve the home environment you crave and deserve!</p>
+            <p>Click on the planner to get started on your own time management journey!</p>
+            <br>
+            <p>Breaking your house down into areas and then the areas into zones is a simple and managable way to set out your goals without feeling overwhelmed.</p>
+            <br>
+            <p>Step by step you can achieve the home environment you crave and deserve!</p>
         </div>
         </div>
 
